--- a/app/src/main/res/layout/movie_details_fragment.xml
+++ b/app/src/main/res/layout/movie_details_fragment.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-    <variable
-        name="movieDetails"
-        type="com.example.movienight.ui.movieDetails.models.MovieDetailsUi" />
+        <import type="com.example.movienight.CustomViewBindingKt"/>
+        <variable
+            name="movieDetails"
+            type="com.example.movienight.ui.movieDetails.models.MovieDetailsUi" />
+
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -15,20 +17,21 @@
         tools:context=".ui.movieDetails.MovieDetailsFragment">
 
         <com.google.android.material.appbar.AppBarLayout
-            android:visibility="gone"
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            app:layout_collapseMode="parallax"
+            android:background="@android:color/transparent"
             android:paddingTop="20dp"
-            app:layout_collapseParallaxMultiplier="1.1"
-            android:background="@android:color/transparent">
+            android:visibility="invisible"
+            app:layout_collapseMode="parallax"
+            app:layout_collapseParallaxMultiplier="1.1">
 
             <ImageView
+                android:id="@+id/movie_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@mipmap/app_icon"
-                android:id="@+id/movie_image" />
+                app:setImage="@{movieDetails.backdropPath ?? @string/default_image}" />
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/collapsing_toolbar"
@@ -50,14 +53,14 @@
                             android:id="@+id/movie_title"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/white"
-                            android:textAlignment="center"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
                             android:text=""
+                            android:textAlignment="center"
+                            android:textColor="@color/white"
                             android:textSize="22sp"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.appcompat.widget.Toolbar>
             </com.google.android.material.appbar.CollapsingToolbarLayout>
@@ -65,170 +68,170 @@
 
         <androidx.core.widget.NestedScrollView
             android:id="@+id/nested_scroll_movie_details"
-            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
+            android:visibility="invisible"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
                 android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp">
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="10dp"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/movie_title_middle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@{movieDetails.title}"
                     android:textAlignment="center"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
                     android:textColor="@color/black"
-                    android:text="movie title"
                     android:textSize="20sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/genres"
-                    app:layout_constraintTop_toBottomOf="@id/movie_title_middle"
-                    app:layout_constraintStart_toStartOf="parent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/genres"
                     android:textColor="@color/black"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/movie_title_middle" />
 
                 <TextView
                     android:id="@+id/genres_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toEndOf="@id/genres"
-                    app:layout_constraintTop_toBottomOf="@id/movie_title_middle"
                     android:layout_marginStart="5dp"
                     android:layout_marginTop="3dp"
-                    android:textSize="15sp"
                     android:textColor="@color/black"
-                    android:text="Comedy, Romance" />
+                    android:textSize="15sp"
+                    app:layout_constraintStart_toEndOf="@id/genres"
+                    app:layout_constraintTop_toBottomOf="@id/movie_title_middle"
+                    app:setGenres="@{movieDetails.genres ?? CustomViewBindingKt.defaultGenres() }" />
 
                 <TextView
-                    android:layout_marginTop="5dp"
                     android:id="@+id/overview"
-                    app:layout_constraintTop_toBottomOf="@id/genres"
-                    app:layout_constraintStart_toStartOf="parent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:text="@string/overview"
                     android:textColor="@color/black"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/genres" />
 
                 <TextView
-                    android:layout_marginTop="5dp"
                     android:id="@+id/overview_text"
-                    app:layout_constraintTop_toBottomOf="@id/overview"
-                    app:layout_constraintStart_toStartOf="parent"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/overview"
+                    android:layout_marginTop="5dp"
+                    android:text="@{movieDetails.overview}"
                     android:textColor="@color/black"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/overview" />
 
                 <TextView
-                    android:layout_marginTop="5dp"
                     android:id="@+id/date"
-                    app:layout_constraintTop_toBottomOf="@id/overview_text"
-                    app:layout_constraintStart_toStartOf="parent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:text="@string/release_date"
                     android:textColor="@color/black"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/overview_text" />
 
                 <TextView
                     android:id="@+id/date_text"
-                    android:layout_marginTop="3dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toEndOf="@id/date"
-                    app:layout_constraintTop_toTopOf="@id/date"
                     android:layout_marginStart="5dp"
-                    android:textSize="15sp"
+                    android:layout_marginTop="3dp"
+                    android:text="@{movieDetails.releaseDate}"
                     android:textColor="@color/black"
-                    android:text="2020-07-02" />
+                    android:textSize="15sp"
+                    app:layout_constraintStart_toEndOf="@id/date"
+                    app:layout_constraintTop_toTopOf="@id/date" />
 
                 <TextView
-                    android:layout_marginTop="5dp"
                     android:id="@+id/language"
-                    app:layout_constraintTop_toBottomOf="@id/date"
-                    app:layout_constraintStart_toStartOf="parent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:text="@string/language"
                     android:textColor="@color/black"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/date" />
 
                 <TextView
                     android:id="@+id/language_text"
-                    android:layout_marginTop="3dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toEndOf="@id/language"
-                    app:layout_constraintTop_toTopOf="@id/language"
                     android:layout_marginStart="5dp"
-                    android:textSize="15sp"
+                    android:layout_marginTop="3dp"
+                    android:text="@{movieDetails.spokenLanguages[0].name}"
                     android:textColor="@color/black"
-                    android:text="English" />
+                    android:textSize="15sp"
+                    app:layout_constraintStart_toEndOf="@id/language"
+                    app:layout_constraintTop_toTopOf="@id/language" />
 
                 <TextView
-                    android:layout_marginTop="5dp"
                     android:id="@+id/quote"
-                    app:layout_constraintTop_toBottomOf="@id/language"
-                    app:layout_constraintStart_toStartOf="parent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:text="@string/quote"
                     android:textColor="@color/black"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/language" />
 
                 <TextView
                     android:id="@+id/quote_text"
-                    android:layout_marginTop="3dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toEndOf="@id/quote"
-                    app:layout_constraintTop_toTopOf="@id/quote"
                     android:layout_marginStart="5dp"
-                    android:textSize="15sp"
+                    android:layout_marginTop="3dp"
+                    android:text="@{movieDetails.tagline}"
                     android:textColor="@color/black"
-                    android:text="SOME QUOTE" />
+                    android:textSize="15sp"
+                    app:layout_constraintStart_toEndOf="@id/quote"
+                    app:layout_constraintTop_toTopOf="@id/quote" />
 
                 <TextView
-                    android:layout_marginTop="5dp"
                     android:id="@+id/rating"
-                    app:layout_constraintTop_toBottomOf="@id/quote_text"
-                    app:layout_constraintStart_toStartOf="parent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
                     android:text="@string/rating"
                     android:textColor="@color/black"
                     android:textSize="18sp"
-                    android:layout_marginBottom="5dp" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/quote_text" />
 
                 <TextView
                     android:id="@+id/rating_text"
-                    android:layout_marginTop="3dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toEndOf="@id/rating"
-                    app:layout_constraintTop_toTopOf="@id/rating"
                     android:layout_marginStart="5dp"
-                    android:textSize="15sp"
+                    android:layout_marginTop="3dp"
+                    android:layout_marginBottom="5dp"
+                    android:text="@{Double.toString(movieDetails.voteAverage)}"
                     android:textColor="@color/black"
-                    android:text="Rate"
-                    android:layout_marginBottom="5dp" />
+                    android:textSize="15sp"
+                    app:layout_constraintStart_toEndOf="@id/rating"
+                    app:layout_constraintTop_toTopOf="@id/rating" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
