--- a/app/src/main/res/layout/movie_details_fragment.xml
+++ b/app/src/main/res/layout/movie_details_fragment.xml
@@ -9,7 +9,9 @@
         <variable
             name="movieDetails"
             type="com.example.movienight.ui.movieDetails.models.MovieDetailsUi" />
-
+        <variable
+            name="movieDetailsFragment"
+            type="com.example.movienight.ui.movieDetails.MovieDetailsFragment" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -32,7 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@mipmap/app_icon"
-                app:setImage="@{movieDetails.backdropPath ?? @string/default_image}" />
+                app:setImage="@{movieDetails.backdropPath}" />
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/collapsing_toolbar"
@@ -116,7 +118,7 @@
                     android:textSize="15sp"
                     app:layout_constraintStart_toEndOf="@id/genres"
                     app:layout_constraintTop_toBottomOf="@id/movie_title_middle"
-                    app:setGenres="@{movieDetails.genres ?? CustomViewBindingKt.defaultGenres() }" />
+                    app:setGenres="@{movieDetails.genres}" />
 
                 <TextView
                     android:id="@+id/overview"
@@ -233,6 +235,20 @@
                     android:textSize="15sp"
                     app:layout_constraintStart_toEndOf="@id/rating"
                     app:layout_constraintTop_toTopOf="@id/rating" />
+                <Button
+                    android:layout_width="180dp"
+                    android:layout_height="50dp"
+                    android:text="@string/rate_this_movie"
+                    app:layout_constraintTop_toBottomOf="@+id/rating"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:textColor="@color/white"
+                    android:background="@drawable/custom_button"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
+                    android:onClick="@{()->movieDetailsFragment.rateMovieDialog()}"
+                    />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
