--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
         android:layout_width = "match_parent"
         android:layout_height = "match_parent"
         android:id="@+id/root_layout"
-        tools:context = ".ui.MainActivity">
+        tools:context = ".ui.main.MainActivity">
 
     <fragment
         android:id="@+id/nav_host_fragment"
