--- a/app/src/main/res/layout/movie_details_fragment.xml
+++ b/app/src/main/res/layout/movie_details_fragment.xml
@@ -5,7 +5,7 @@
 
     <data>
         <import type="android.view.View"/>
-        <import type="com.example.movienight.CustomViewBindingKt"/>
+        <import type="com.example.movienight.utilities.BindingUtilitiesKt"/>
         <variable
             name="movieDetails"
             type="com.example.movienight.ui.movieDetails.models.MovieDetailsUi" />
@@ -235,25 +235,21 @@
                     android:textSize="15sp"
                     app:layout_constraintStart_toEndOf="@id/rating"
                     app:layout_constraintTop_toTopOf="@id/rating" />
+
                 <Button
                     android:layout_width="180dp"
                     android:layout_height="50dp"
-                    android:text="@string/rate_this_movie"
-                    app:layout_constraintTop_toBottomOf="@+id/rating"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:textColor="@color/white"
-                    android:background="@drawable/custom_button"
-                    android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/custom_button"
                     android:onClick="@{()->movieDetailsFragment.rateMovieDialog()}"
-                    />
+                    android:text="@string/rate_this_movie"
+                    android:textColor="@color/white"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/rating" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-
         </androidx.core.widget.NestedScrollView>
-
-
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
