--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,8 +14,8 @@
             android:id="@+id/action_popularMoviesFragment_to_movieDetailsFragment"
             app:destination="@id/movieDetailsFragment" />
         <action
-            android:id="@+id/action_popularMoviesFragment_to_chatRoomFragment"
-            app:destination="@id/chatRoomFragment" />
+            android:id="@+id/action_popularMoviesFragment_to_chatRoomActivity"
+            app:destination="@id/chatRoomActivity" />
     </fragment>
     <fragment
         android:id="@+id/movieDetailsFragment"
@@ -26,13 +26,8 @@
             android:name="movie_id"
             app:argType="integer" />
     </fragment>
-    <fragment
-        android:id="@+id/chatRoomFragment"
-        android:name="com.example.movienight.ui.chatRoom.ChatRoomFragment"
-        android:label="chat_room_fragment"
-        tools:layout="@layout/chat_room_fragment" >
-        <action
-            android:id="@+id/action_chatRoomFragment_to_popularMoviesFragment"
-            app:destination="@id/popularMoviesFragment" />
-    </fragment>
+    <activity
+        android:id="@+id/chatRoomActivity"
+        android:name="com.example.movienight.ui.chatRoom.ChatRoomActivity"
+        android:label="ChatRoomActivity" />
 </navigation>
